// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`functional context 1`] = `
<NamedContext
  id="testFunc"
>
  <Component
    context={
      Object {
        "Consumer": [Function],
        "Provider": [Function],
      }
    }
    id="testFunc"
  >
    <Provider
      value="1"
    >
      <SubscribeWrap
        id="testFunc"
      >
        <Consumer
          quiet={false}
        >
          <Component
            count="1"
            id="testFunc"
          >
            1
          </Component>
        </Consumer>
      </SubscribeWrap>
      <Subscribe
        select="count"
        to="testFunc"
      >
        <SubscribeWrap>
          <Consumer
            quiet={false}
          >
            <Component
              count="1"
            >
              1
            </Component>
          </Consumer>
        </SubscribeWrap>
      </Subscribe>
    </Provider>
  </Component>
</NamedContext>
`;

exports[`keyed context 1`] = `
<NamedContext>
  <Component
    context={
      Object {
        "Consumer": [Function],
        "Provider": [Function],
      }
    }
  >
    <Provider
      value="1"
    >
      <SubscribeWrap>
        <Consumer
          quiet={false}
        >
          <Component
            count="1"
          >
            1
          </Component>
        </Consumer>
      </SubscribeWrap>
      <Subscribe
        select="count"
        to="testKeyed"
      >
        <SubscribeWrap>
          <Consumer
            quiet={false}
          >
            <Component
              count="1"
            >
              1
            </Component>
          </Consumer>
        </SubscribeWrap>
      </Subscribe>
    </Provider>
  </Component>
</NamedContext>
`;
